[gd_scene load_steps=27 format=2]

[ext_resource path="res://Objects/Enemies/Koopa/Koopa.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Walk/koopa2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Walk/koopa1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Walk/koopa3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Walk/koopa4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Walk/koopa5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Walk/koopa6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Shell/koopa_die2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Shell/koopa_die3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Shell/koopa_die1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Shell/koopa_die4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Shell/koopa_die5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Shell/koopa_die6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Shell/koopa_die7.png" type="Texture" id=14]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Shell/koopa_die8.png" type="Texture" id=15]
[ext_resource path="res://Assets/Audio/Enemies/goomba_die.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Audio/Mario/mario_footsteps.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Die/koopa_die5.png" type="Texture" id=18]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Die/koopa_die3.png" type="Texture" id=19]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Die/koopa_die4.png" type="Texture" id=20]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Die/koopa_die1.png" type="Texture" id=21]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Koopa/Die/koopa_die2.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 18 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "shell",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.01489, 12 )

[sub_resource type="Animation" id=3]
resource_name = "squash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.594604, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.7 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.594604, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, 3 ), Vector2( 0, -2 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 11 )

[node name="Koopa" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 1 )
animation = "walk"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="SFXWallCollision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
bus = "SFX"

[node name="SFXDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/squash = SubResource( 3 )

[node name="Shell" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shell"]
position = Vector2( 0, 5 )
shape = SubResource( 4 )
[connection signal="cappy_kill" from="." to="." method="_on_Koopa_cappy_kill"]
[connection signal="kill" from="." to="." method="_on_Koopa_kill"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Shell" to="." method="_on_Shell_body_entered"]
